--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -17,11 +17,11 @@
           .btn-group
             - params_query = params[:query] || {}
             - kind = params_query[:kind]
-            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.except(:kind))), class: ('active' unless kind)}
+            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.except(:kind))), class: ('active' unless kind), rel: 'nofollow'}
               = t '.all'
-            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.merge(kind: :skydive))), class: ('active' if kind == 'skydive')} 
+            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.merge(kind: :skydive))), class: ('active' if kind == 'skydive'), rel: 'nofollow'} 
               Skydive
-            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.merge(kind: :base))), class: ('active' if kind == 'base')}
+            %a.btn.btn-sm.btn-default{href: tracks_path(params.merge(query: params_query.merge(kind: :base))), class: ('active' if kind == 'base'), rel: 'nofollow'}
               B.A.S.E
     .row
       .col-sm-12.top-buffer
