changed url to relative path to prevent page reload when clicking skyderby in navbar

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to t('application.header.home'), root_url, class: 'navbar-brand'
+      = link_to t('application.header.home'), root_path, class: 'navbar-brand'
 
     .navbar-collapse.collapse#skyderby-navbar-collapse
       %ul.nav.navbar-nav
