Removed page headers from index actions, added highlight navbar section

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -106,6 +106,17 @@
   box-shadow:         0px 1px 2px 0px rgba(0,0,0,0.08);
 }
 
+.navbar-nav > li.nav-active > a {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-top-style: solid;
+  border-top-width: 3px;
+  border-top-color: transparent;
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  border-bottom-color: rgb(0, 132, 180);
+}
+
 .center-pills { display: inline-block; }
 
 .btn-link {
