--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,13 +11,13 @@
 
     .navbar-collapse.collapse#skyderby-navbar-collapse
       %ul.nav.navbar-nav
-        %li
+        %li{class: ('nav-active' if current_page?(controller: 'tracks'))}
           = link_to t('application.header.tracks'), tracks_path
-        %li
+        %li{class: ('nav-active' if current_page?(controller: 'events') || current_page?(controller: 'tournaments'))}
           = link_to t('application.header.competitions'), events_path
-        %li
+        %li{class: ('nav-active' if current_page?(controller: 'virtual_competitions'))}
           = link_to t('application.header.online_competitions'), virtual_competitions_path 
-        %li
+        %li{class: ('nav-active' if current_page?(controller: 'places'))}
           = link_to t('application.header.places'), places_path
            
       %ul.nav.navbar-nav.navbar-right
