--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,6 +35,10 @@
   width: auto; display:inline;
 }
 
+p.form-control-static {
+  margin: 0;
+}
+
 @navbar-default-bg:         rgba(255,255,255, 0.95);
 @navbar-default-border:     fade(#000, 14%);
 @page-header-border-color:  fade(#000, 14%);
