--- a/app/views/events/sections/_section_row.html.haml
+++ b/app/views/events/sections/_section_row.html.haml
@@ -9,27 +9,28 @@
                 class: 'edit-section' do
         %i.fa.fa-pencil.text-muted
 
-      %span.pipe-edit-section.text-muted
-        |
+      - if @event.sections.many?
+        %span.pipe-edit-section.text-muted
+          |
 
-      - unless section.first_position?
-        = button_to(move_upper_event_section_path(@event, section),
-                    remote: true,
-                    params: {'display_raw_results' => @display_raw_results},
-                    method: :patch,
-                    class: 'btn-link section-up') do
-          %i.fa.fa-chevron-up.text-muted
+        - unless section.first_position?
+          = button_to(move_upper_event_section_path(@event, section),
+                      remote: true,
+                      params: {'display_raw_results' => @display_raw_results},
+                      method: :patch,
+                      class: 'btn-link section-up') do
+            %i.fa.fa-chevron-up.text-muted
 
-      - unless section.last_position?
-        = button_to(move_lower_event_section_path(@event, section),
-                    remote: true, 
-                    params: {'display_raw_results' => @display_raw_results},
-                    method: :patch, 
-                    class: 'btn-link section-down') do
-          %i.fa.fa-chevron-down.text-muted
+        - unless section.last_position?
+          = button_to(move_lower_event_section_path(@event, section),
+                      remote: true, 
+                      params: {'display_raw_results' => @display_raw_results},
+                      method: :patch, 
+                      class: 'btn-link section-down') do
+            %i.fa.fa-chevron-down.text-muted
 
-      %span.pipe-edit-section.text-muted
-        |
+        %span.pipe-edit-section.text-muted
+          |
 
       = button_to(event_section_path(@event, section),
                 method: :delete,
