Edit range, FAI window, fixed #34
Fixed edit range form. Added button to set FAI window 3000-2000.

--- a/app/views/tracks/show.js.erb
+++ b/app/views/tracks/show.js.erb
@@ -17,6 +17,9 @@ $("#range-selector").ionRangeSlider('update', {
   to: <%= @track_presenter.range_to %>
 });
 
+$('#f').val(<%= @track_presenter.range_from %>);
+$('#t').val(<%= @track_presenter.range_to %>);
+
 window.history.replaceState({},
                             document.title,
                             "<%= url_for(params.except(:range, :charts_mode, :charts_units)).html_safe %>"
