--- a/app/views/tracks/_track_edit_range.html.haml
+++ b/app/views/tracks/_track_edit_range.html.haml
@@ -1,23 +1,29 @@
 .modal.fade#edit-range{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
     .modal-content
-      .modal-header
-        %button.close{type: 'button', data: {dismiss: 'modal'}}
-          %span{aria: {hidden: 'true'}}
-            &times;
-          %span.sr-only
-            Close
-        %h4.modal-title= t('tracks.show.edit_range')
+      = form_for :track, method: :get, remote: true do |f|
+        - bounds = @track.altitude_bounds
+        .modal-header
+          %button.close{type: 'button', data: {dismiss: 'modal'}}
+            %span{aria: {hidden: 'true'}}
+              &times;
+            %span.sr-only
+              Close
+          %h4.modal-title= t('tracks.show.edit_range')
 
-      .modal-body
-        .form-inline
-          %label.control-label
-            = t('tracks.show.range_from')
-          %input.form-control#range-from{type: 'number', align: 'right'}
-          %label.control-label
-            = t('tracks.show.range_to')
-          %input.form-control#range-to{type: 'number', align: 'right'}
+        .modal-body
+          .form-inline
+            %label.control-label
+              = t('tracks.show.range_from')
+            = text_field_tag :f, params[:f] || bounds[:max_altitude], class: 'form-control' #%input.form-control#range-from{type: 'number', align: 'right'}
+            %label.control-label
+              = t('tracks.show.range_to')
+            = text_field_tag :t, params[:t] || bounds[:min_altitude], class: 'form-control' #%input.form-control#range-to{type: 'number', align: 'right'}
 
-      .modal-footer
-        %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t('general.cancel')
-        %button.btn.btn-success#apply-new-range{type: 'button', data: {dismiss: 'modal'}}= 'OK'
+        .modal-footer
+          .pull-left
+            - if @track.skydive? && bounds[:max_altitude] >= 3000 && bounds[:min_altitude]
+              = link_to 'FAI window: 3000-2000 m', track_path(@track, f: 3000, t: 2000), remote: true, 'data-dismiss': 'modal', class: 'btn btn-default'
+
+          %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t('general.cancel')
+          = f.submit 'OK', 'data-dismiss': 'modal', class: 'btn btn-primary'
