--- a/app/views/charts/single_chart_options.js.erb
+++ b/app/views/charts/single_chart_options.js.erb
@@ -3,7 +3,12 @@
 
 {
   chart: {
-    type: 'spline'
+    type: 'spline',
+    events: {
+      load: function() {
+        Skyderby.helpers.chart_load_callback('single_chart_', this.series);
+      }
+    }
   },
   title: {
     text: "<%= t('charts.all_data.title') %>"
@@ -17,6 +22,11 @@
     series: {
       marker: {
         radius: 1
+      },
+      events: {
+        legendItemClick: function() {
+          localStorage.setItem('single_chart_' + this.options.code, !this.visible);
+        }
       }
     }
   },
@@ -86,6 +96,7 @@
   series: [
     {
     name: "<%= t('charts.all_data.series.horiz_speed') %>",
+    code: 'ground_speed',
     yAxis: 0,
     color: '#52A964',
     tooltip: {
@@ -95,6 +106,7 @@
   },
   {
     name: "<%= t('charts.all_data.series.vert_speed') %>",
+    code: 'vertical_speed',
     yAxis: 0,
     color: '#A7414E',
     tooltip: {
@@ -104,6 +116,7 @@
   },
   {
     name: "<%= t('charts.all_data.series.full_speed') %>",
+    code: 'full_speed',
     yAxis: 0,
     color: '#D6A184',
     visible: false,
@@ -114,6 +127,7 @@
   },
   {
     name: "<%= t('charts.all_data.series.gr') %>",
+    code: 'gr',
     yAxis: 2,
     tooltip: {
       valueSuffix: '',
@@ -132,6 +146,7 @@
   },
   {
     name: "<%= t('charts.all_data.series.height') %>",
+    code: 'height',
     yAxis: 1,
     color: '#aaa',
     tooltip: {
@@ -142,6 +157,7 @@
   <% if display_distance %>
   ,{
     name: I18n.t('charts.all_data.series.distance'),
+    code: 'distance',
     yAxis: 1,
     color: Highcharts.getOptions().colors[5],
     tooltip: {
@@ -154,6 +170,7 @@
   <% if display_elevation %>
   ,{
     name: I18n.t('charts.all_data.series.elevation'),
+    code: 'elevation',
     yAxis: 1,
     color: Highcharts.getOptions().colors[3],
     tooltip: {
