#29 Ability to show/hide competitor trajectory on map

--- a/app/assets/stylesheets/events/rounds/map.css.scss
+++ b/app/assets/stylesheets/events/rounds/map.css.scss
@@ -31,8 +31,12 @@
       color: rgb(221, 221, 221);
     }
 
+    tr > td:nth-child(1) {
+      width: 25px;
+    }
+
     td.round-map-competitor {
-        padding-left: 20px;
+        padding-left: 7px;
     }
 
   }
