#33 added uploaded at, recorded at and download link to track show

--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -20,8 +20,18 @@
 
     = render 'tracks/charts'
     
-    - if @track.comment.present?
-      %blockquote
-        %small= @track.comment
+    %blockquote
+      - if @track.comment.present?
+        %small
+          = @track.comment
+
+      %small
+        = "Recorded at #{@track.recorded_at.strftime('%d.%m.%Y %H:%M')} (UTC); "
+        = "Uploaded at #{@track.created_at.strftime('%d.%m.%Y %H:%M')} (UTC)"
+
+      - if @track.track_file
+        %small
+          Download file:
+          = link_to @track.track_file.file_file_name, @track.track_file.file.url(:origin)
 
   = render 'track_edit_range'
