--- a/app/views/tracks/videos/show.html.haml
+++ b/app/views/tracks/videos/show.html.haml
@@ -2,12 +2,12 @@
 
 .track-replay{data: @track_data.to_data_attr}
   .container
-    = render partial: 'header', locals: {track: @track_data.track}
+    = render partial: 'tracks/header', locals: {track: @track_data.track}
     .row
       .col-sm-12
         .videowrapper
           #player
-    .row
+    .row.track-indicators
       .col-md-11.col-md-offset-1.col-sm-12
         .row
           .col-md-3.col-sm-4.col-xs-6
@@ -17,30 +17,30 @@
                 .min-val
                   %span#p_elev_diff= '---'
                   %i.fa.fa-lg.fa-caret-down
-              .dst-unit.fa-2x= t 'units.m'
+              .units.dst-unit.fa-2x= t 'units.m'
             .param
               %i.fa.fa-fw.fa-lg.fa-arrows-v
-              =t '.altitude'
+              =t 'tracks.indicators.altitude'
 
           .col-md-3.col-sm-4.col-xs-6
             .param-val
               .avg-val.fa-3x#p_cur_v_speed= '---'
-              .spd-unit.fa-2x=t 'units.kmh'
+              .units.spd-unit.fa-2x=t 'units.kmh'
             .param
               %i.fa.fa-fw.fa-lg.fa-long-arrow-down
-              =t '.vertical_speed'
+              =t 'tracks.indicators.vertical_speed'
 
           .col-md-3.col-sm-4.col-xs-6
             .param-val
               .avg-val.fa-3x#p_cur_h_speed= '---'
-              .spd-unit.fa-2x=t 'units.kmh'
+              .units.spd-unit.fa-2x=t 'units.kmh'
             .param
               %i.fa.fa-fw.fa-lg.fa-long-arrow-right
-              =t '.horizontal_speed'
+              =t 'tracks.indicators.ground_speed'
 
           .col-md-3.col-sm-4.col-xs-6
             .param-val
               .avg-val.fa-3x#p_cur_gr= '-.--'
             .param
               %i.fa.fa-fw.fa-lg.fa-ellipsis-h
-              =t '.glide_ratio'
+              =t 'tracks.indicators.glide_ratio'
