--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -22,3 +22,12 @@
   width: 100%;
   text-align: left;
 }
+
+.tooltip-wrapper {
+  display: inline-block;
+}
+
+.tooltip-wrapper .btn[disabled] {
+  /* don't let button block mouse events from reaching wrapper */
+  pointer-events: none;
+}
