issue #33, ablities and download link Squashed commit of the following:
commit bee9d7a24b51a5168d6c6267b6dcedd73f9cdea1
Author: Aleksandr Kunin <ab@ipkunin.ru>
Date:   Sat Sep 24 21:22:52 2016 +0300

    abilities covered by tests

commit 9c9990a5a076a9cfc0027a1f711f5a64f8c069e2
Author: Aleksandr Kunin <ab@ipkunin.ru>
Date:   Sat Sep 24 21:22:16 2016 +0300

    link to download shows only to person who can update track #33

commit d5ebd8c3c7cd106a7e59e67122889c8323a54d75
Author: Aleksandr Kunin <ab@ipkunin.ru>
Date:   Sat Sep 24 21:17:36 2016 +0300

    refactored and covered by tests user abilities for tracks

--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -29,7 +29,7 @@
         = "Recorded at #{@track.recorded_at.strftime('%d.%m.%Y %H:%M')} (UTC); "
         = "Uploaded at #{@track.created_at.strftime('%d.%m.%Y %H:%M')} (UTC)"
 
-      - if @track.track_file
+      - if can?(:update, @track) && @track.track_file
         %small
           Download file:
           = link_to @track.track_file.file_file_name, @track.track_file.file.url(:origin)
