--- a/app/views/tracks/videos/new.html.haml
+++ b/app/views/tracks/videos/new.html.haml
@@ -1,32 +1,69 @@
-.track-video-new
+.track-video-new{'data-points': @points.to_json.html_safe}
   .container
     = render partial: 'tracks/header', locals: {track: @track}
 
-    .col-sm-offset-2
-      = form_for @video, url: track_video_path(track: @track, track_video: @video), remote: true, html: {class: 'form-horizontal'} do |f|
-        .form-group
-          = f.label :url, class: 'control-label col-sm-2'
-          .col-sm-4
-            = f.text_field :url, class: 'form-control'
-        .form-group
-          = f.label :video_code, class: 'control-label col-sm-2'
-          .col-sm-4
-            %p.video-code.form-control-static= @video.video_code
+    %h2
+      Setup video and track synchronization
 
-        #player
+    = form_for @video, url: track_video_path(track: @track, track_video: @video), remote: true, html: {class: 'form-horizontal'} do |f|
+      .row
+        .col-sm-4
+          %h3
+            Youtube video
+          %p
+            Upload video of the jump and paste link to the field
 
-        .form-group
-          = f.label :video_offset, class: 'control-label col-sm-2'
-          .col-sm-2
-            .input-group
-              = f.text_field :video_offset, class: 'form-control'
-              %span.input-group-btn
-                %button#set-current-time.btn.btn-default
-                  %i.fa.fa-chevron-left
-        .form-group
-          = f.label :track_offset, class: 'control-label col-sm-2'
-          .col-sm-4
-            = f.text_field :track_offset, class: 'form-control'
+          -# .form-group
+          -# = f.label :url, class: 'control-label col-sm-2'
+        .col-sm-8.top-buffer
+          = f.text_field :url, class: 'form-control'
+          = f.hidden_field :video_code
+
+      %hr
+
+      .row
+        .col-sm-4 
+          %h3
+            Start of the jump on video
+          %p
+            Play video until jump started, then press button in the field to paste current time.
+            Value in the field is a seconds from beginning of video.
+        .col-sm-8
+          #player
+
+        .col-sm-3.col-sm-offset-4.top-buffer
+          .input-group
+            = f.text_field :video_offset, class: 'form-control text-center'
+            %span.input-group-btn
+              %button#set-current-time.btn.btn-default
+                Set
+
+      %hr
+
+      .row
+        .col-sm-4
+          %h3
+            Start of the jump on track
+          %p
+            Find start of the jump on the chart.
+            Value in the field is a seconds from when you start recording jump.
+        .col-sm-8
+          #chart
+        .col-sm-3.col-sm-offset-4
+          .input-group
+            %span.input-group-btn
+              %button#dec-track-offset.btn.btn-default
+                %i.fa.fa-chevron-left
+
+            = f.text_field :track_offset, class: 'form-control text-center'
+
+            %span.input-group-btn
+              %button#inc-track-offset.btn.btn-default
+                %i.fa.fa-chevron-right
+
+      .row
+        .col-sm-8.col-sm-offset-4.top-buffer-30
+          = f.submit t('general.save'), class: 'btn btn-primary btn-lg'
 
 - content_for :page_js do
   :coffeescript
