--- a/app/views/tracks/videos/edit.html.haml
+++ b/app/views/tracks/videos/edit.html.haml
@@ -3,7 +3,7 @@
     = render partial: 'tracks/header', locals: {track: @track}
 
     %h2
-      Setup video and track synchronization
+      = t '.header'
 
     = render 'form'
 
