--- a/app/assets/stylesheets/sponsors.css.scss
+++ b/app/assets/stylesheets/sponsors.css.scss
@@ -1,3 +1,9 @@
+#sponsors {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+
 .sponsor {
   display: flex;
   justify-content: center;
