--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -2,23 +2,25 @@
     
   .container
     = render partial: 'header', locals: {track: @track}
-    = render partial: 'indicators', locals: {presenter: @track_presenter}
 
-    %hr.top-buffer
+    .content-block
+      = render partial: 'indicators', locals: {presenter: @track_presenter}
 
-    .row#content-row
-      .col-sm-12
+      %hr.top-buffer
 
-        #btn-range-edit
-          %button.btn.btn-default#range-edit-button{data: {toggle:'modal', target:'#edit-range'}}
-            %i.fa.fa-arrows-h
-        #slider-range-selector
-          %input#range-selector{type: "text",
-                                name: 'range', 
-                                data: {remote: 'true', url: url_for},
-                                value: "#{@track_presenter.range_from};#{@track_presenter.range_to}"}
+      .row#content-row
+        .col-sm-12
 
-    = render 'tracks/charts'
+          #btn-range-edit
+            %button.btn.btn-default#range-edit-button{data: {toggle:'modal', target:'#edit-range'}}
+              %i.fa.fa-arrows-h
+          #slider-range-selector
+            %input#range-selector{type: "text",
+                                  name: 'range', 
+                                  data: {remote: 'true', url: url_for},
+                                  value: "#{@track_presenter.range_from};#{@track_presenter.range_to}"}
+
+      = render 'tracks/charts'
     
     %blockquote
       - if @track.comment.present?
