--- a/app/views/tracks/maps/show.html.haml
+++ b/app/views/tracks/maps/show.html.haml
@@ -4,15 +4,16 @@
   -# {points: @track_data.points.to_json.html_safe}}
   .container
     = render partial: 'tracks/header', locals: {track: @track}
-    .row
-      .track-map-wrapper.col-sm-12
-        #track-map-loading.text-muted
-          #track-map-loading-api.fa-2x
-            %i.fa.fa-fw.fa-spin.fa-circle-o-notch
-            Loading Google Maps API
-          #track-map-loading-data.fa-2x
-            %i.fa.fa-fw.fa-spin.fa-circle-o-notch
-            Loading track data
-        #track-map
-        #track-map-polar-chart
-        = render 'tracks/speed_grades'
+    .content-block
+      .row
+        .track-map-wrapper.col-sm-12
+          #track-map-loading.text-muted
+            #track-map-loading-api.fa-2x
+              %i.fa.fa-fw.fa-spin.fa-circle-o-notch
+              Loading Google Maps API
+            #track-map-loading-data.fa-2x
+              %i.fa.fa-fw.fa-spin.fa-circle-o-notch
+              Loading track data
+          #track-map
+          #track-map-polar-chart
+          = render 'tracks/speed_grades'
