--- a/app/views/wingsuits/show.html.haml
+++ b/app/views/wingsuits/show.html.haml
@@ -17,64 +17,65 @@
         = link_to 'Edit', edit_wingsuit_path(@wingsuit), class: 'btn btn-default'
 
 .container
-  -# Nav tabs
-  %ul.nav.nav-tabs{role: 'tablist'}
-    %li.active{role: 'presentation'}
-      %a{href: '#tab-pane-skydive', aria: {controls: 'skydive'}, role: 'tab', data: {toggle: "tab"}}
-        Skydive
-    %li{role: 'presentation'}
-      %a{href: '#tab-pane-base', aria: {controls: 'skydive'}, role: 'tab', data: {toggle: "tab"}}
-        B.A.S.E
+  .content-block
+    -# Nav tabs
+    %ul.nav.nav-tabs{role: 'tablist'}
+      %li.active{role: 'presentation'}
+        %a{href: '#tab-pane-skydive', aria: {controls: 'skydive'}, role: 'tab', data: {toggle: "tab"}}
+          Skydive
+      %li{role: 'presentation'}
+        %a{href: '#tab-pane-base', aria: {controls: 'skydive'}, role: 'tab', data: {toggle: "tab"}}
+          B.A.S.E
 
-  -# Tab panes
-  .tab-content
-    #tab-pane-skydive.tab-pane.active{role: "tabpanel"}
-      %table.table.table-hover
-        %thead
-          %tr
-            %th=t 'activerecord.attributes.track.id'
-            %th=t 'activerecord.attributes.track.name'
-            %th=t 'activerecord.attributes.track.location'
-            %th.text-right= t('disciplinse.distance')
-            %th.text-right= t('disciplinse.speed')
-            %th.text-right= t('disciplinse.time')
-            %th=t 'activerecord.attributes.track.comment'
-            %th=t 'activerecord.attributes.track.recorded_at'
-            %th
-        %tbody
-          - @wingsuit.tracks.accessible_by(current_user).skydive.order('id DESC').each do |track|
-            %tr.clickableRow{data: {url: track_path(id: track.id)}}
-              %td.text-info= track.id
-              %td.text-info= track_pilot(track)
-              %td.text-info= track_place(track)
-              %td.text-info= track.distance.result if track.distance
-              %td.text-info= track.speed.result if track.speed
-              %td.text-info= track.time.result if track.time
-              %td.text-muted= track.comment
-              %td.text-info= track.recorded_at.strftime('%d.%m.%Y')
-              %td= track_icons(track)
+    -# Tab panes
+    .tab-content
+      #tab-pane-skydive.tab-pane.active{role: "tabpanel"}
+        %table.table.table-hover
+          %thead
+            %tr
+              %th=t 'activerecord.attributes.track.id'
+              %th=t 'activerecord.attributes.track.name'
+              %th=t 'activerecord.attributes.track.location'
+              %th.text-right= t('disciplinse.distance')
+              %th.text-right= t('disciplinse.speed')
+              %th.text-right= t('disciplinse.time')
+              %th=t 'activerecord.attributes.track.comment'
+              %th=t 'activerecord.attributes.track.recorded_at'
+              %th
+          %tbody
+            - @wingsuit.tracks.accessible_by(current_user).skydive.order('id DESC').each do |track|
+              %tr.clickableRow{data: {url: track_path(id: track.id)}}
+                %td.text-info= track.id
+                %td.text-info= track_pilot(track)
+                %td.text-info= track_place(track)
+                %td.text-info= track.distance.result if track.distance
+                %td.text-info= track.speed.result if track.speed
+                %td.text-info= track.time.result if track.time
+                %td.text-muted= track.comment
+                %td.text-info= track.recorded_at.strftime('%d.%m.%Y')
+                %td= track_icons(track)
 
-    #tab-pane-base.tab-pane{role: "tabpanel"}
-      %table.table.table-hover
-        %thead
-          %tr
-            %th=t 'activerecord.attributes.track.id'
-            %th=t 'activerecord.attributes.track.name'
-            %th=t 'activerecord.attributes.track.location'
-            %th= 'Distance'
-            %th= 'Speed'
-            %th= 'Time'
-            %th=t 'activerecord.attributes.track.comment'
-            %th=t 'activerecord.attributes.track.uploaded_at'
-        %tbody
-          - @wingsuit.tracks.accessible_by(current_user).base.order('id DESC').each do |track|
-            %tr.clickableRow{data: {url: track_path(id: track.id)}}
-              %td.text-info= track.id
-              %td.text-info= track_pilot(track)
-              %td.text-info= track_place(track)
-              %td.text-info= track.distance.result if track.distance
-              %td.text-info= track.speed.result if track.speed
-              %td.text-info= track.time.result if track.time
-              %td.text-muted= track.comment
-              %td.text-info= track.created_at.strftime('%d.%m.%Y')
-              %td= track_icons(track)
+      #tab-pane-base.tab-pane{role: "tabpanel"}
+        %table.table.table-hover
+          %thead
+            %tr
+              %th=t 'activerecord.attributes.track.id'
+              %th=t 'activerecord.attributes.track.name'
+              %th=t 'activerecord.attributes.track.location'
+              %th= 'Distance'
+              %th= 'Speed'
+              %th= 'Time'
+              %th=t 'activerecord.attributes.track.comment'
+              %th=t 'activerecord.attributes.track.uploaded_at'
+          %tbody
+            - @wingsuit.tracks.accessible_by(current_user).base.order('id DESC').each do |track|
+              %tr.clickableRow{data: {url: track_path(id: track.id)}}
+                %td.text-info= track.id
+                %td.text-info= track_pilot(track)
+                %td.text-info= track_place(track)
+                %td.text-info= track.distance.result if track.distance
+                %td.text-info= track.speed.result if track.speed
+                %td.text-info= track.time.result if track.time
+                %td.text-muted= track.comment
+                %td.text-info= track.created_at.strftime('%d.%m.%Y')
+                %td= track_icons(track)
